# Core_RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml  model.yaml  query_router.yaml
core_rag/: __init__.py
core_rag/ingestion/: __init__.py  content_extract.py  edit_metadata.py  embedding.py  file_ingest.py  ingest.py  ingest_helpers.py  json_extract.py
core_rag/memory/: __init__.py  chat_session.py  compressor.py  db.py  schema.sql  session_store.py
core_rag/retrieval/: __init__.py  answer.py  bm25.py  context_formatter.py  llm_handler.py  query_router.py  rag_agent.py  reranker.py  schemas.py  search.py  unified_rag.py
core_rag/summary/: __init__.py  summary_index.py  summary_retriever.py
core_rag/utils/: __init__.py  clean_collections.py  config_loader.py  doc_id.py  docstore.py  llm_api.py  ollama_api.py  text_preprocessing.py
core_rag/utils/backends/: __init__.py  base.py  ollama.py  openai_compat.py
data/major_catalogs/: 2025_cs.md
data/recipes/: krabby_patty_instructions.md
scripts/: check_collection.py  run_tests.sh  test_search_direct.py
src/ingestion/: __init__.py  chunking.py  edit_metadata.py  ingest.py
src/retrieval/: query_router.py  rag_agent.py  reranker.py  unified_rag.py
src/utils/: __init__.py  clean_collections.py  clean_pdf_hyperlinks.py
tests/: conftest.py  test_ingest.py  test_memory.py  test_query.py  test_rag_features.py
